--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,16 @@
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@tailwindcss/vite": "^4.1.13",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "motion": "^12.23.15",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-element-to-jsx-string": "^17.0.1",
     "react-router-dom": "^6.30.1",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
   "devDependencies": {
